@@ -4,6 +4,7 @@ V.NEXT
 - [MINOR] Separate constants for max client and broker protocol versions (#2008)
 - [PATCH] Pulling device cert issuer check to beginning of OnReceivedClientCertRequest (#2010)
 - [MINOR] Add method to clear receiver concurrentHashMap in LocalBroadcaster (#1993)
+- [PATCH] Mapping ECDSA to EC in ClientCertRequest's keyTypes array (#2015)
 
 V.11.0.0
 ----------
